Fix runtime hangs with health tracking and larger deployment instances (#21)
## Summary
- Add runtime health tracking so stalled auction updates surface through
`/health` with a `503` and reason header
- Add timeout, progress, and JVM runtime diagnostics around Blizzard
auction downloads and hourly stats processing
- Increase deployment instance size and expand container inspection
output to help diagnose runtime hangs in production

## Task Reference
- GitHub issue: Resolves #
- Local task doc:
- Task slug:

## Context For Reviewers
- Focus is operational visibility and faster failure detection for
long-running or stuck update batches
- Health status now depends on scheduler progress, not just process
liveness

## Changes
- Update scheduled batch and auction processing flows to report runtime
progress and failure states
- Add request timeouts and richer logging for metadata fetches, payload
downloads, S3 archiving, and stats aggregation
- Return a summary object from hourly stats processing and extend tests
for health and scheduling behavior
- Increase AWS instance size from `t4g.micro` to `t4g.small` and expand
deploy inspection diagnostics

## Testing
- [x] Tests added or updated where needed
- [ ] Verified locally

### Checks run
```text
Not run (not requested)
```

## Screenshots
N/A

## Checklist
- [ ] This PR references the GitHub issue it resolves or fixes
- [ ] This PR references the local task doc or slug when one exists
- [x] Scope stays aligned with the linked task
- [ ] Documentation updated if behavior or workflow changed